KUBE-CONFIG/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      labels:
        components: frontend
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: converter-configmap
              mountPath: /opt/app/config
              subPath: config
      
      volumes:
        - name: converter-configmap
          configMap:
            name: converter-config
