KUBE-CONFIG/converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend2
  template:
    metadata:
      labels:
        components: backend2
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3003
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: uploads-volume
              mountPath: /opt/app/uploads
      volumes:
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: uploads-pvc

# DATABASE_URL
# postgres://user:password@url:5432/db
# postgresql://demo:demo@postgres-clusterip:5432/demo

# RABBIT_URL
# amqp://username:password@host:port
# amqp://demo:demo@rabbitmq-clusterip:5672
