KUBE-CONFIG/api-services.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
  namespace: homework
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    components: backend
