KUBE-CONFIG/converter-services.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
  namespace: homework
spec:
  type: ClusterIP
  ports:
    - port: 3003
      protocol: TCP
  selector:
    components: backend2
