KUBE-CONFIG/rabbitmq-services.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
  namespace: homework
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    components: rabbitmq
